[FIX] alignment2 to alignment_two, [IMPROVED] styling of input

--- a/public/styles/blast-visualization.css
+++ b/public/styles/blast-visualization.css
@@ -295,8 +295,9 @@ label.forwardLabel input[type=radio] {
 
 #viewport{
     width: 50em;
-    height: 36em;
+    height: 35em;
     margin: 0 auto;
+
 }
 
 
